# AUTONOMOUS_DRIVING_ROS

./: LABGROUP.md  README.md  index.html
control_barrel_world/: CMakeLists.txt  package.xml
control_barrel_world/include/: control_barrel_world.h
control_barrel_world/launch/: solution.launch
control_barrel_world/src/: control_barrel_world.cpp  main.cpp
pcl_obstacle_detector/: CMakeLists.txt  package.xml  pcl_obstacle_detector_node.cpp
pcl_obstacle_detector/include/: pcl_obstacle_detector.h
pcl_obstacle_detector/src/: main.cpp  pcl_obstacle_detector.cpp
