<?xml version="1.0"?>
<package format="2">
  <name>control_barrel_world</name>
  <version>0.0.0</version>
  <description>The control_barrel_world package</description>
  <maintainer email="henk.jekel@student.tudelft.nl">henk</maintainer>
  
  <license>TODO</license>

 
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>prius_msgs</depend>
</package>
