<?xml version="1.0"?>
<package format="2">
  <name>pcl_obstacle_detector</name>
  <version>0.0.0</version>
  <description>
    Package that contains the node "pcl_obstacle_detector_node" to detect 3D bounding boxes of all barrels in the lidar pointcloud using PCl. 
  </description>
  <maintainer email="h.a.jekel@student.tudelft.nl">
    H.A. Jekel
  </maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>vision_msgs</depend>
  

</package>
